2004-07-12  Bruno Haible  <bruno@clisp.org>

	* lispbibl.d (Class): Remove direct_generic_functions field.
	* clos-specializer1.lisp (specializer): Remove direct-generic-functions
	slot.
	(*<specializer>-direct-generic-functions-location*): Remove constant.
	(*<specializer>-direct-methods-location*): Update.
	(specializer-direct-generic-functions-table): Remove accessor.
	(shared-initialize-<specializer>): Update.
	(*<eql-specializer>-...-location*): Decrement by 1.
	(*<eql-specializer>-instance-size*): New constant.
	(make-instance-<eql-specializer>): Use it.
	(specializer-direct-generic-functions-table): Remove accessor.
	* clos-class1.lisp (*<class>-...-location*): Decrement by 1.
	(*<built-in-class>-instance-size*): Likewise.
	(*<slotted-class>-...-location*): Likewise.
	(*<structure-class>-...-location*): Likewise.
	(*<structure-class>-instance-size*): Likewise.
	(*<semi-standard-class>-...-location*): Likewise.
	(*<standard-class>-instance-size*): Likewise.
	* clos-genfun1.lisp (*<funcallable-standard-class>-instance-size*):
	Likewise.

2004-09-08  Sam Steingold  <sds@gnu.org>

	* foreign.d (open_library): since name may be modified by
	check_string(), it must be passed by reference
	(update_library, FOREIGN-LIBRARY): pass name to open_library()
	by reference
	Reported by Jörg Höhle

2004-09-08  Sam Steingold  <sds@gnu.org>

	* modules/exporting.lisp: PROVIDE "exporting"
	* modules/bindings/glibc/linux.lisp, modules/bindings/win32/win32.lisp:
	* modules/matlab/matlab.lisp, modules/netica/netica.lisp:
	* modules/postgresql/postgresql.lisp: REQUIRE "exporting" instead
	of an explicit LOAD to permit stand-alone loading

2004-09-08  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 1024332 ]: file system traversing problems
	* makemake.in (someflags): new variable: encflags + -norc
	use it uniformly everywhere

2004-09-08  Sam Steingold  <sds@gnu.org>

	* init.lisp (load): use the input-stream as the unique EOF object

2004-07-12  Bruno Haible  <bruno@clisp.org>
